[gd_scene load_steps=4 format=3 uid="uid://brsrym1ni44dd"]

[ext_resource type="Script" path="res://ship_components/WeldPoint.gd" id="1_lkinq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5kvum"]

[sub_resource type="BoxShape3D" id="BoxShape3D_etb85"]
size = Vector3(0.5, 4, 4)

[node name="WeldArea" type="Area3D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_lkinq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_5kvum")

[node name="WeldPoint" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = false

[node name="CastShape" type="CollisionShape3D" parent="WeldPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0)
shape = SubResource("BoxShape3D_etb85")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
